--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix --ext .js,.jsx, ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +41,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+   "devDependencies": {
+    "eslint-plugin-autofix": "^1.1.0",
+    "eslint": "^8.51.0",
+    "eslint-auto-fix": "^1.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-css": "^0.8.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
